Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4481

CPP API should not initialize all handles on every event.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • CPP API
    • None

    Description

      To avoid problems with stale handles to transaction headers the CPP API was changed to initialize all such handles for a set of events. However this causes the error log to be flooded because not all headers are available for all of the events and each one that is not generates an error message. This generates a lot of errors even in normal use without problems. Simply disabling the messages seems a poor choice as the cases where the particular header is accessed and not found should be noted.

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: