TS-4481: CPP API - clear handles and reload on demand. This closes #663.