lib/atscppapi/src/include/atscppapi/Transaction.h
@@ -85,6 +85,11 @@ public:
   ~Transaction();
 
   /**
+   * Set the @a event for the currently active hook.
+   */
+  void setEvent(TSEvent event);
+
+  /**
    * Context Values are a way to share data between plugins, the key is always a string
    * and the value can be a shared_ptr to any type that extends ContextValue.
    * @param key the key to search for.
@@ -384,37 +389,16 @@ private:
    *
    * @private
    */
-  void initServerRequest(TSEvent event);
+  Request &initServerRequest();
 
   /**
-   * Used to initialize the Response object for the Server.
-   *
-   * @private
-   */
-  void initServerResponse(TSEvent event);
-
-  /**
-   * Used to initialize the Response object for the Client.
-   *
-   * @private
-   */
-  void initClientResponse(TSEvent event);
-
-  /**
-   * Used to initialize the Request object for the cache.
+   * Reset all the transaction handles (for response/requests).
+   * This is used to clear handles that may have gone stale.
    *
    * @private
    */
 
-  void initCachedRequest(TSEvent event);
-
-  /**
-   * Used to initialize the Response object for the cache.
-   *
-   * @private
-   */
-
-  void initCachedResponse(TSEvent event);
+  void resetHandles();
 
   /**
    * Returns a list of TransactionPlugin pointers bound to the current Transaction
